# unite

./: .gitignore  .readthedocs.yaml  CITATION.cff  CITATION.md  CLAUDE.md  README.md  example-config-broad.json  example-config-narrow.json  paper.bib  pyproject.toml  unite_example.ipynb
.github/workflows/: autorelease.yml  bench.yml  ci.yml  docs.yml  draft-pdf.yml  paper.yml  publish.yml
benchmarks/: README.md  __init__.py  _helpers.py  bench_analytic_path.py  bench_compile.py  bench_endtoend.py  bench_kernels.py  bench_results.py  conftest.py
docs/: citing.md  concepts.md  conf.py  contributing.md  getting_started.md  index.md  installation.md
docs/api/: config.rst  continuum.rst  disperser.rst  index.md  instrument.rst  instruments.rst  line.rst  model.rst  prior.rst  results.rst  spectrum.rst
docs/derivations/: gauss-hermite.md  polynomial.md  semg.md  skew-normal.md  skew-voigt.md
docs/guides/: advanced.md  continuum_configuration.md  index.md  instruments.md  line_configuration.md  line_profiles.md  priors.md  results.md  running_model.md  serialization.md  spectra.md
docs/tutorials/: README.rst  generic.md  index.md  nirspec.md  programmatic.md  tutorial_config.py  tutorial_freeze.py  tutorial_generic.py  tutorial_nirspec.py  unite.mplstyle
docs/usage/: build_model.md  continuum_configuration.md  inference.md  instrument.md  line_configuration.md  priors.md  results.md  serialization.md
paper/: paper.bib  paper.md
profiling/: profile_fit.py
tests/: test_config.py  test_continuum.py  test_continuum_fit.py  test_continuum_functions.py  test_dependent_priors.py  test_disperser_base.py  test_disperser_config.py  test_disperser_generic.py  test_evaluate.py  test_instrument_base.py  test_instrument_config.py  test_instrument_nirspec.py  test_instrument_sdss.py  test_instrument_spectrum.py  test_line.py  test_line_labels.py  test_lsf_convolve.py  test_minimal_model.py  test_nirspec.py  test_optimized.py  test_prior.py  test_results.py  test_sdss.py  test_spectra.py  test_utils.py
tests/continuum/: test_continuum.py  test_continuum_lsf.py  test_fit.py  test_functions.py  test_template.py
tests/instrument/: test_base.py  test_config.py  test_desi.py  test_disperser.py  test_nirspec.py  test_sdss.py  test_spectrum.py
tests/line/: test_analytic.py  test_evaluate.py  test_integrate.py  test_library.py  test_line.py  test_line_labels.py  test_numerical.py  test_profiles.py  test_quadrature.py
unite/: __init__.py  _compose.py  _lsf.py  _utils.py  calibration.py  compute.py  config.py  configuration.py  defaults.py  evaluate.py  fitting.py  initial.py  model.py  model.py.bak  optimized.py  parameters.py  plotting.py  prior.py  priors.py  results.py  spectra.py  spectra.py.new  utils.py
unite/continuum/: __init__.py  compute.py  config.py  fit.py  functions.py  library.py
unite/data/resolution/: jwst_nirspec_g140h_resolution.fits  jwst_nirspec_g140m_resolution.fits  jwst_nirspec_g235h_resolution.fits  jwst_nirspec_g235m_resolution.fits  jwst_nirspec_g395h_resolution.fits  jwst_nirspec_g395m_lsf.fits  jwst_nirspec_g395m_resolution.fits  jwst_nirspec_prism_lsf.fits  jwst_nirspec_prism_resolution.fits  point_source_lsf_clear_prism_QD3_i185_j85.csv  point_source_lsf_f290lp_g395m_QD3_i185_j85.csv  point_source_lsf_f290lp_g395m_QD4_i185_j85.csv
unite/disperser/: __init__.py  base.py  config.py  generic.py
unite/disperser/nirspec/: __init__.py  disperser.py  spectrum.py
unite/disperser/nirspec/data/: __init__.py
unite/disperser/sdss/: __init__.py  disperser.py  spectrum.py
unite/instrument/: __init__.py  base.py  config.py  generic.py  spectrum.py
unite/instrument/desi/: __init__.py  disperser.py
unite/instrument/nirspec/: __init__.py  disperser.py  spectrum.py
unite/instrument/nirspec/data/: __init__.py
unite/instrument/sdss/: __init__.py  disperser.py  spectrum.py
unite/instruments/: __init__.py
unite/instruments/nirspec/: __init__.py  disperser.py  spectrum.py
unite/instruments/sdss/: __init__.py  disperser.py  spectrum.py
unite/line/: __init__.py  compute.py  config.py  functions.py  library.py  profiles.py
unite/spectrum/: __init__.py  collection.py  loaders.py  spectrum.py
