[project]
name = "unite"
description = "Unified Numerical Integration Tool for spEctroscopy"
authors = [{name = "Raphael Erik Hviding", email = "raphael.hviding@gmail.com"}]
requires-python = ">= 3.12"
version = "1.0.0"
dependencies = [ "numpyro>=0.18.0,<0.19", "astropy>=7.0.1,<8", "matplotlib>=3.10.3,<4"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Astronomy",
  "Topic :: Scientific/Engineering :: Physics",
  "License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14"
]


[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["unite"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64", "linux-64", "osx-64"]

[tool.pixi.environments]
default = {features = [], solve-group = "default"}
build = {features = ["build"], solve-group = "build"}

[tool.pixi.tasks]
format = "ruff format unite"

[tool.pixi.dependencies]
python = ">=3.13.3,<3.14"
ruff = ">=0.11.9,<0.12"

[tool.pixi.activation]
env = {"JAX_ENABLE_X64" = "1", "JAX_LOGGING_LEVEL" = "ERROR"}

[tool.pixi.pypi-dependencies]
unite = { path = ".", editable = true }

[tool.pixi.feature.build]
dependencies = { twine = ">=6.1.0,<7" }
pypi-dependencies = { build = ">=1.2.2.post1, <2" }
tasks = { build = "python -m build" }

[tool.ruff.format]
quote-style = "single"
skip-magic-trailing-comma = true

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.isort]
length-sort = false
combine-as-imports = true
split-on-trailing-comma = false
force-sort-within-sections = false
